--- a/src/http_interface/templates/index.html
+++ b/src/http_interface/templates/index.html
@@ -11,14 +11,14 @@
 <div class="container">
   <div class="jumbotron">
     <h1>Event Processing with Celery</h1>
-      <p>Locations of Twitter events streaming at 10 tweets/sec</p>
+      <p>Air quality Measurements collected from multiple APIs asynchronously.</p>
   </div>
 </div>
     
 </div>
 <div class="container" id="content">
     <div class="row">
-        <h3>Recent locations tweeted from:</h3>
+        <h3>Recent Measurements:</h3>
         <div id="log">
         </div> <!-- /#log -->
     </div>
